# cross-slash

./: Cargo.toml
arc-dump/: Cargo.toml
arc-dump/src/: main.rs
arc-reader/: Cargo.toml
arc-reader/src/: archive.rs  hash.rs  index.rs  io.rs  lib.rs
arc-reader/src/archive/: containers.rs  data.rs  resource.rs
arc-reader/src/archive/data/: file_data.rs  file_desc.rs  file_entity.rs  file_group.rs  file_info.rs  file_package.rs  file_path.rs  stream_data.rs  stream_desc.rs  stream_folder.rs  stream_path.rs
arc-reader/src/archive/resource/: serialization.rs
