[package]
name = "arc-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2"
byteorder = "1.5.0"
hash40 = "1.3.1"
indexmap = "2.1.0"
paste = "1"
thiserror = "1.0.51"

[target.'cfg(not(target_os = "switch"))'.dependencies]
zstd = "0.13.0"

[target.'cfg(target_os = "switch")'.dependencies]
skyline = "0.2"

[features]
default = ["cast-sanity"]
cast-sanity = []
